src/objects/Prospects__c.object
<CustomObject>
    <description>PMC</description>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <label>Additional Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>Address line 2</description>
        <label>Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliations_w_Orgs_or_Volunteer_Work__c</fullName>
        <description>Affiliations with Organizations or Volunteer Work</description>
        <inlineHelpText>Affiliations with Organizations or Volunteer Work</inlineHelpText>
        <label>Affiliations w/Orgs or Volunteer Work</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Auto_Insurance_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Automobile Insurance Received</description>
        <inlineHelpText>All Automobile Insurance Recieved</inlineHelpText>
        <label>All Auto Insurance Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Auto_Registration_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Automobile Registration Received</description>
        <inlineHelpText>All Automobile Registration Received</inlineHelpText>
        <label>All Auto Registration Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_DMV_Records_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All DMV Records Received</description>
        <inlineHelpText>All DMV Records Received</inlineHelpText>
        <label>All DMV Records Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Drivers_License_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Drivers License Received</description>
        <inlineHelpText>All Drivers License Received</inlineHelpText>
        <label>All Drivers License Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Comments__c</fullName>
        <description>App Comments</description>
        <label>Applied at TMN before Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Application_Approved_Date__c</fullName>
        <inlineHelpText>Date the application status is set to approved by a manager and when prospect enters the screening stage</inlineHelpText>
        <label>Application Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Received_Date__c</fullName>
        <description>Date recruiter received completed application.</description>
        <inlineHelpText>Date recruiter received completed application.</inlineHelpText>
        <label>Application Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Review_Status__c</fullName>
        <description>Mark status of application as pending, rejected or approved. An approved application will move prospect to Screening stage.</description>
        <inlineHelpText>Mark status of application as pending, rejected or approved. An approved application will move prospect to Screening stage.</inlineHelpText>
        <label>Application Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Sent_Date__c</fullName>
        <description>Application Sent Date</description>
        <inlineHelpText>Date prospect was sent or handed the Mentor application.</inlineHelpText>
        <label>Application Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Status_Notes__c</fullName>
        <description>Text field required for when application status is set to pending or rejected</description>
        <inlineHelpText>Text field required for when application status is set to pending or rejected</inlineHelpText>
        <label>Application Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applied_at_TMN_before__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applied at TMN before</description>
        <inlineHelpText>Check this box if the Prospect has applied at TMN before and make any comments about the application in the App Comments field.</inlineHelpText>
        <label>Applied at TMN before</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approving_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Mentor Recruiter Manager to notify to conduct the Final Review.</inlineHelpText>
        <label>Approving Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prospects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Insurance_Expiration__c</fullName>
        <label>Auto Insurance Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Registration_Expiration__c</fullName>
        <label>Auto Registration Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Background_Check_Completed_Date__c</fullName>
        <description>Background Check Completed Date</description>
        <inlineHelpText>This field relates to the primary prospect  (not other household members).  Enter the date background checks were completed (not OIG).</inlineHelpText>
        <label>Background Check Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Background_Check_Results_Other__c</fullName>
        <description>Background Check Results (Other household members)</description>
        <inlineHelpText>Background Check Results (Other household members)</inlineHelpText>
        <label>Background Check Results-Others</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Apply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Background_Check_Results__c</fullName>
        <description>Background Check Results</description>
        <inlineHelpText>This field relates to the primary prospect  (not other household members).  Enter the results of the background checks (not OIG).</inlineHelpText>
        <label>Background Check Results</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Background_Check_Started_Date__c</fullName>
        <description>Background Check Started Date</description>
        <inlineHelpText>This field relates to the primary prospect (not other household members).  Enter the date background checks were started (not OIG).</inlineHelpText>
        <label>Background Check Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Church_or_Religious_Affiliation_Others__c</fullName>
        <description>Chruch or Religious Affiliation - Others</description>
        <inlineHelpText>Chruch or Religious Affiliation - Others</inlineHelpText>
        <label>Church or Religious Affiliation - Others</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Church_or_Religious_Affiliation__c</fullName>
        <description>Church or Religious Affiliation</description>
        <inlineHelpText>Church or Religious Affiliation</inlineHelpText>
        <label>Church or Religious Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>No Religious Affiliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christianity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judaism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buddhism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hinduism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Islam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Please Specify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Closed Date</description>
        <inlineHelpText>On Hold / Closed Date</inlineHelpText>
        <label>Closed / On Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_On_Hold_Reasons__c</fullName>
        <label>Closed / On Hold Reasons</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Contact Attempts Not Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desired program not currently offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate/system error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure to meet internal/other requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incompatible schedules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misunderstanding - Mentor role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misunderstanding – Seeking Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program office closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect area not currently served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect family issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect indicates “Do Not Contact”</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect is learning to speak English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect needs more time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect not willing to take English classes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect relocated out of area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selected another agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stipend does not meet financial needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type of client not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Made__c</fullName>
        <inlineHelpText>Date of the 1st conversation between recruiter and prospect. Please remember to document this and future conversations using the Log a Call feature where you can take detailed notes and create follow up tasks to help you keep prospects organized.</inlineHelpText>
        <label>Contact Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Comments__c</fullName>
        <description>Contract Comments</description>
        <label>Contracted with TMN before Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contracted_with_TMN_before__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contracted with TMN before</description>
        <inlineHelpText>Contracted with TMN before</inlineHelpText>
        <label>Contracted with TMN before</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of Birth</description>
        <inlineHelpText>Date of Birth</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Inquiry__c</fullName>
        <defaultValue>today()</defaultValue>
        <inlineHelpText>The date prospect filled out the web inquiry form or when Recruiter met prospect/received a manual inquiry.</inlineHelpText>
        <label>Date of Inquiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_NOT_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do NOT Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drivers_License_Expiration__c</fullName>
        <inlineHelpText>For Primary Mentor</inlineHelpText>
        <label>Drivers License Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Education_Highest_Level_Attained__c</fullName>
        <description>Education (Highest Level Attained)</description>
        <inlineHelpText>Education (Highest Level Attained)</inlineHelpText>
        <label>Education (Highest Level Attained)</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Degree Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelor&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctorate Degree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entry_Point__c</fullName>
        <defaultValue>&quot;Employee&quot;</defaultValue>
        <description>Entry Point</description>
        <inlineHelpText>Entry Point</inlineHelpText>
        <label>Entry Point</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>Ethnicity</description>
        <inlineHelpText>Ethnicity</inlineHelpText>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Not Specified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic or Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Hispanic or Latino</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Failure_to_Meet_Requirements__c</fullName>
        <label>Failure to Meet Requirements</label>
        <picklist>
            <controllingField>Closed_On_Hold_Reasons__c</controllingField>
            <picklistValues>
                <fullName>Background check issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health check issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental requirements failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No extra bedroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No drivers license/transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No High School Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not meet age requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect does not have required income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not pass fire marshall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too many people in home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Family Issue</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>File_Submitted_for_Approval__c</fullName>
        <label>File Submitted for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Review__c</fullName>
        <description>Final Review</description>
        <inlineHelpText>Final Review</inlineHelpText>
        <label>Final Review</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fire_Safety_Check_Date__c</fullName>
        <label>Fire Safety Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fire_Safety_Check__c</fullName>
        <description>Fire Safety Check</description>
        <inlineHelpText>Fire Safety Check</inlineHelpText>
        <label>Fire Safety Check</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Contact_Attempt_Notes__c</fullName>
        <inlineHelpText>Indicate time of call and/or email details as well as outcome (i.e. left message, prospect did not answer, etc.)</inlineHelpText>
        <label>First Contact Attempt Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Contact_Date__c</fullName>
        <description>First Contact Date</description>
        <inlineHelpText>Enter the date this prospect was first contacted.</inlineHelpText>
        <label>First Contact Attempt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Location__c</fullName>
        <formula>IF( AND(UPPER( TEXT( Region__r.Type__c ) )  = &quot;STATE&quot;, Entry_Point__c =&quot;Web&quot; ),  br() &amp; zCaution__c &amp; &quot; This is a web-based inquiry that was routed to a State because the zip code has not been setup to route to a specific region.&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;div/&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender</description>
        <inlineHelpText>Gender</inlineHelpText>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_Status_Statement_Received__c</fullName>
        <description>Health Status Statement Received</description>
        <inlineHelpText>Health Status Statement Received</inlineHelpText>
        <label>Health Status Statement Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Health_Status_Statement_Results_Other__c</fullName>
        <description>Health Status Statement Results (Other Household members)</description>
        <inlineHelpText>Health Status Statement Results (Other Household members)</inlineHelpText>
        <label>Health Status Statement Results-Others</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Apply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_Status_Statement_Results__c</fullName>
        <description>Health Status Statement Results</description>
        <inlineHelpText>Health Status Statement Results</inlineHelpText>
        <label>Health Status Statement Results</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_Status_Statement_Sent__c</fullName>
        <description>Health Status Statement Sent</description>
        <inlineHelpText>Health Status Statement Sent</inlineHelpText>
        <label>Health Status Statement Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Renter_Insurance_Expiration_Date__c</fullName>
        <label>Home/Renter Insurance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Renter_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Home/Renter&apos;s Insurance</description>
        <inlineHelpText>Home/Renter&apos;s Insurance</inlineHelpText>
        <label>Home/Renter Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Study_Comments__c</fullName>
        <description>Home Study Comments</description>
        <label>Home Study Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Home_Study_Completed_Date__c</fullName>
        <description>Home Study Completed Date</description>
        <inlineHelpText>Enter the date this prospect&apos;s home study was completed.</inlineHelpText>
        <label>Home Study Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Study_Results__c</fullName>
        <description>Home Study Results</description>
        <inlineHelpText>Enter the results of this prospect&apos;s home study.</inlineHelpText>
        <label>Home Study Results</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Study_Started_Date__c</fullName>
        <description>Home Study Started Date</description>
        <inlineHelpText>Home Study Started Date</inlineHelpText>
        <label>Home Study Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Household_Income__c</fullName>
        <description>Household Income</description>
        <inlineHelpText>Household Income</inlineHelpText>
        <label>Household Income</label>
        <picklist>
            <picklistValues>
                <fullName>Less than $30,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$30,000 - $40,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$40,001 - $50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,001 - $60,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$60,001 - $75,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$75,001 - $100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over $100,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <description>Generic Referral Source; Labeled on web-form &quot;How did you hear about us?&quot;</description>
        <inlineHelpText>A drop down field found on the self-entry web-form that identifies the medium through which the prospect heard about us (tv, newspaper, radio, event, etc.)</inlineHelpText>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended an event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News story (TV, radio, newspaper)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred by someone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Im_intersted_in_supporting__c</fullName>
        <description>I&apos;m interested in supporting</description>
        <label>I&apos;m interested in supporting</label>
        <picklist>
            <picklistValues>
                <fullName>Adults with intellectual/developmental disabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children and Adolescents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Home_Care_Experience__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Experience providing In-Home Care</description>
        <inlineHelpText>Check this box if the prospect has provided in-home care with another agency.</inlineHelpText>
        <label>In-Home Care Experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Person_Overview__c</fullName>
        <inlineHelpText>Date recruiter and prospect met in person which may be in the form of a group info session, presentation or one-on-one meeting where recruiter explains the program/process.</inlineHelpText>
        <label>In-Person Overview</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Info_Meeting_Attended_Date__c</fullName>
        <description>Info Meeting Attended Date</description>
        <inlineHelpText>Date recruiter and prospect met in person which may be in the form of a group info session, presentation or one-on-one meeting where recruiter explains the program/process.</inlineHelpText>
        <label>Info Meeting Attended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Info_Meeting_Attended__c</fullName>
        <description>Summary field for report</description>
        <formula>IF (ISNULL (Info_Meeting_Attended_Date__c),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rpt Info Meeting Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Info_Packet_Provided_Date__c</fullName>
        <description>Info Packet Provided Date</description>
        <inlineHelpText>Date prospect was sent or given an info packet.</inlineHelpText>
        <label>Info Packet Provided Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inquiry_Milestones_Complete_Count__c</fullName>
        <formula>IF(ISNULL( First_Contact_Date__c),0, 1) 
+ 
IF(ISBLANK( First_Contact_Attempt_Notes__c), 0, 1) 
+ 
IF(ISNULL(Week_1_Follow_Up__c), 0, 1) 
+ 
IF(ISBLANK(Week_1_Follow_Up_Notes__c), 0, 1) 
+ 
IF(ISNULL( Week_2_Follow_Up__c), 0, 1) 
+ 
IF(ISBLANK( Week_2_Follow_Up_Notes__c), 0, 1) 
+ 
IF(ISNULL( Week_3_Follow_Up__c ),0, 1) 
+ 
IF(ISBLANK(Week_3_Follow_Up_Notes__c),0, 1) 
+ 
IF(ISNULL( Info_Packet_Provided_Date__c ),0, 1) 
+ 
IF(ISNULL( Application_Sent_Date__c ),0, 1) 
+ 
IF(ISNULL( Application_Received_Date__c ),0, 1) 
+ 
IF(ISNULL( Contact_Made__c ),0, 1) 
+ 
IF(Text( Application_Review_Status__c )=&quot;Approved&quot;,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquiry Milestones Complete Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inquiry_Milestones_cont__c</fullName>
        <formula>IF(ISNULL( Info_Packet_Provided_Date__c ), zRedX__c , zGreenChk__c ) &amp; &quot;Info Packet Provided&quot; 
&amp; 
IF(ISNULL( Application_Sent_Date__c ), zRedX__c , zGreenChk__c ) &amp; &quot;Application Sent&quot; 
&amp; 
IF(ISNULL( Application_Received_Date__c ), zRedX__c , zGreenChk__c ) &amp; &quot;Application Recieved&quot; 
&amp; 
IF(ISNULL( Contact_Made__c ), zRedX__c, zGreenChk__c) &amp; &quot;Contact Made&quot; 
&amp; 
IF(Text( Application_Review_Status__c ) = &quot;Approved&quot;, zGreenChk__c, zRedX__c ) &amp; &quot;Approved&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquiry Milestones (cont.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Progress__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000002LpJ&quot;, &quot;P&quot;, 15,  Inquiry_Progress_percent__c*250 )
&amp;
br()
&amp;
IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000002LpI&quot;, &quot;P&quot;, 2, 250 )
&amp;
br()
&amp;
Text(Round( Inquiry_Progress_percent__c,2)*100) &amp; &quot;%&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquiry Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Progress_percent__c</fullName>
        <formula>Inquiry_Milestones_Complete_Count__c /13</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquiry Progress %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>